@@ -65,7 +65,8 @@ The figure below shows relations among those mode:
 
 *** Useful commands
 - =M-x oh-my-github-sync= Sync GitHub repositories(owned and starred).
-  - Emacs maybe hang a while depending on how many repositories you have.
+  - +Emacs maybe hang a while depending on how many repositories you have.+
+  - In master branch, synchronization happens in background thread, which will not hang Emacs any more. Users can check =*oh-my-github-sync*= for progress.
   - Mostly this command only need to be executed once.
 - =M-x oh-my-github-star-list= Display GitHub starred repositories in table view.
 - =M-x oh-my-github-repo-list= Display GitHub owned repositories in table view.
